--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-pandas
-numpy
-seaborn
-matplotlib
-scikit-learn
+NumPy: 1.21.5
+Pandas: 1.4.2
+Seaborn: 0.11.2
+Matplotlib: 3.5.3
+Scikit-learn: 1.0.2
